feat: add quantitative sensitivity descriptions and update README with screenshots

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,6 +12,9 @@
   "sensitivityLow": "Low (Default)",
   "sensitivityMedium": "Medium (Sensitive)",
   "sensitivityHigh": "High (Most Sensitive)",
+  "sensitivityLowDesc": "Accel > 3.0m/s², Brake > 3.5m/s²",
+  "sensitivityMediumDesc": "Accel > 2.4m/s², Brake > 2.8m/s²",
+  "sensitivityHighDesc": "Accel > 1.8m/s², Brake > 2.1m/s²",
   "sensitivityTip": "Higher sensitivity means lower acceleration thresholds for auto-tagging events.",
   "rapidAcceleration": "Rapid Acceleration",
   "rapidDeceleration": "Rapid Deceleration",
