--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -12,6 +12,9 @@
   "sensitivityLow": "低 (默认)",
   "sensitivityMedium": "中 (更灵敏)",
   "sensitivityHigh": "高 (最灵敏)",
+  "sensitivityLowDesc": "急加速 > 3.0m/s², 急刹车 > 3.5m/s²",
+  "sensitivityMediumDesc": "急加速 > 2.4m/s², 急刹车 > 2.8m/s²",
+  "sensitivityHighDesc": "急加速 > 1.8m/s², 急刹车 > 2.1m/s²",
   "sensitivityTip": "敏感度越高，触发急加速、急刹车等事件所需的加速度阈值就越小。",
   "rapidAcceleration": "急加速",
   "rapidDeceleration": "急减速",
