feat: release version 1.0.6 with PocketBase sync and UI improvements

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,19 +23,42 @@
   "wobble": "Wobble",
   "start_trip": "START TRIP",
   "stop_trip": "STOP TRIP",
-    "calibrating": "Calibrating...",
-    "calibration_tip": "Keep the phone stable for vehicle alignment",
-    "edit": "Edit",
-    "modify_vehicle_info": "Modify Vehicle Info",
-    "vehicle_info": "Vehicle Info",
-    "car_model": "Vehicle Model",
-    "software_version": "Software Version",
-    "model_hint": "Enter model (e.g. Model 3)",
-    "version_hint": "Enter version (e.g. v12.5)",
-    "skip": "Skip",
-    "save": "Save",
-    "about": "About",
-    "current_version": "Current Version",
-    "check_update": "Check for Update"
+  "calibrating": "Calibrating...",
+  "calibration_tip": "Keep the phone stable for vehicle alignment",
+  "edit": "Edit",
+  "modify_vehicle_info": "Modify Vehicle Info",
+  "vehicle_info": "Vehicle Info",
+  "car_model": "Car Model",
+  "software_version": "Software Version",
+  "model_hint": "Enter model (e.g. Model 3)",
+  "version_hint": "Enter version (e.g. v12.5)",
+  "skip": "Skip",
+  "save": "Save",
+  "about": "About",
+  "current_version": "Current Version",
+  "check_update": "Check for Update",
+  "account": "Account",
+  "login": "Login",
+  "logout": "Logout",
+  "sync_data": "Sync Data",
+  "login_to_sync": "Login to sync data and share trips",
+  "connected_as": "Connected as: {name}",
+  "brand": "My ADAS",
+  "my_car": "My Car",
+  "password": "Password",
+  "name": "Nickname",
+  "register": "Register",
+  "no_account": "Don't have an account? Register",
+  "has_account": "Already have an account? Login",
+  "login_failed": "Login failed",
+  "register_failed": "Registration failed",
+  "forgot_password": "Forgot Password?",
+  "reset_email_sent": "Reset email sent, please check your inbox",
+  "verify_email": "Verify Email",
+  "verification_sent": "Verification email sent",
+  "not_verified": "Not verified (Tap to verify)",
+  "error_email_taken": "Email already registered",
+  "error_invalid_credentials": "Invalid email or password",
+  "error_password_too_short": "Password must be at least 8 characters",
+  "verification_success": "Verification successful!"
 }
-
