--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -23,19 +23,42 @@
   "wobble": "摆动",
   "start_trip": "开始行程",
   "stop_trip": "结束行程",
-    "calibrating": "校准中...",
-    "calibration_tip": "请保持手机静止以对齐车辆坐标系",
-    "edit": "编辑",
-    "modify_vehicle_info": "修改车辆信息",
-    "vehicle_info": "车辆信息",
-    "car_model": "测试车型",
-    "software_version": "软件版本",
-    "model_hint": "输入车型 (如 Model 3)",
-    "version_hint": "输入软件版本 (如 v12.5)",
-    "skip": "跳过",
-    "save": "保存",
-    "about": "关于",
-    "current_version": "当前版本",
-    "check_update": "检查更新"
+  "calibrating": "校准中...",
+  "calibration_tip": "请保持手机静止以对齐车辆坐标系",
+  "edit": "编辑",
+  "modify_vehicle_info": "修改车辆信息",
+  "vehicle_info": "车辆信息",
+  "car_model": "车型",
+  "software_version": "软件版本",
+  "model_hint": "输入车型 (如 Model 3)",
+  "version_hint": "输入软件版本 (如 v12.5)",
+  "skip": "跳过",
+  "save": "保存",
+  "about": "关于",
+  "current_version": "当前版本",
+  "check_update": "检查更新",
+  "account": "账号",
+  "login": "登录",
+  "logout": "退出登录",
+  "sync_data": "同步数据",
+  "login_to_sync": "登录以同步数据并分享行程",
+  "connected_as": "已连接为: {name}",
+  "brand": "我的智驾",
+  "my_car": "我的爱车",
+  "password": "密码",
+  "name": "昵称",
+  "register": "注册",
+  "no_account": "还没有账号？去注册",
+  "has_account": "已有账号？去登录",
+  "login_failed": "登录失败",
+  "register_failed": "注册失败",
+  "forgot_password": "忘记密码？",
+  "reset_email_sent": "重置邮件已发送，请检查收件箱",
+  "verify_email": "验证邮箱",
+  "verification_sent": "验证邮件已发送",
+  "not_verified": "账号未验证 (点击验证)",
+  "error_email_taken": "Email已被注册",
+  "error_invalid_credentials": "邮箱或密码错误",
+  "error_password_too_short": "密码至少需要8位",
+  "verification_success": "验证成功！"
 }
-
