chore: release v2.0.0 - Arena, Cloud Sync, and CI/CD

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,8 @@
 {
   "appTitle": "Puked",
   "settings": "Settings",
+  "history": "History",
+  "arena": "Arena",
   "language": "Language",
   "theme": "Theme",
   "themeAuto": "System",
@@ -60,5 +62,37 @@
   "error_email_taken": "Email already registered",
   "error_invalid_credentials": "Invalid email or password",
   "error_password_too_short": "Password must be at least 8 characters",
-  "verification_success": "Verification successful!"
+    "verification_success": "Verification successful!",
+    "syncing": "Syncing cloud status...",
+    "sync_complete": "Sync complete, marked {count} trips",
+    "no_cloud_records": "No matching cloud records found",
+    "sync_cloud_status": "Sync upload status",
+    "arena_top10_title": "Safe Driving Top 10",
+    "km_per_event_long": "KM per Negative Event (Higher is better)",
+    "by_brand": "By Brand",
+    "by_version": "By Version",
+    "arena_total_mileage_title": "Mileage Leaderboard",
+    "arena_total_mileage_subtitle": "Total mileage recorded per brand",
+    "arena_brand_evolution_title": "{brand} Evolution",
+    "km_per_version_event_long": "Comfort performance across software versions",
+    "arena_details_title": "Negative Experience Breakdown",
+    "km_per_event": "km/Event",
+    "all_versions": "All Versions",
+    "select_brand": "Select Brand",
+    "no_trips_yet": "No trip data recorded yet. Start a trip to see statistics!",
+    "no_data_for_brand": "No data available for the selected brand or version.",
+    "events_count": "{count} Events",
+    "trips_count": "{count} Trips",
+    "mileage_label": "Mileage",
+    "car_cert_banner": "Verify your car to enable trip uploads",
+    "upload_cert_photos": "Car Certification",
+    "upload_hint": "Please upload a photo showing your car model and VIN (usually found on the lower driver-side windshield or door pillar).",
+    "file_limit_hint": "Up to 3 photos (JPG/PNG, < 5MB each)",
+    "submit_for_audit": "Submit for Verification",
+    "submit_success_tip": "Verification details submitted! We'll review them shortly.",
+    "error_image_limit": "Please select up to 3 photos.",
+    "error_image_size": "Each photo must be under 5MB.",
+    "error_image_type": "Only JPG and PNG photos are supported.",
+    "delete_event_title": "Confirm Delete Event",
+    "delete_event_desc": "Deleted events cannot be recovered. Are you sure?"
 }
