--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,6 +1,8 @@
 {
   "appTitle": "吐槽",
   "settings": "设置",
+  "history": "历史行程",
+  "arena": "Arena",
   "language": "语言",
   "theme": "主题",
   "themeAuto": "跟随系统",
@@ -60,5 +62,37 @@
   "error_email_taken": "Email已被注册",
   "error_invalid_credentials": "邮箱或密码错误",
   "error_password_too_short": "密码至少需要8位",
-  "verification_success": "验证成功！"
+    "verification_success": "验证成功！",
+    "syncing": "同步云端状态中...",
+    "sync_complete": "同步完成，已标记 {count} 条行程",
+    "no_cloud_records": "云端没有找到相关记录",
+    "sync_cloud_status": "同步上传状态",
+    "arena_top10_title": "智驾安全 Top 10",
+    "km_per_event_long": "无负面体验里程 (越高越稳)",
+    "by_brand": "按品牌",
+    "by_version": "按版本",
+    "arena_total_mileage_title": "智驾里程榜",
+    "arena_total_mileage_subtitle": "各品牌累计智驾行程里程",
+    "arena_brand_evolution_title": "{brand} 进化趋势",
+    "km_per_version_event_long": "不同软件版本的舒适度表现趋势",
+    "arena_details_title": "负面体验详情分布",
+    "km_per_event": "公里/次",
+    "all_versions": "所有版本",
+    "select_brand": "选择品牌",
+    "no_trips_yet": "还没有行程数据，开始一段智驾行程来查看统计吧！",
+    "no_data_for_brand": "所选品牌或版本暂无数据。",
+    "events_count": "{count} 次事件",
+    "trips_count": "{count} 次行程",
+    "mileage_label": "里程",
+    "car_cert_banner": "完成爱车认证，开启行程提交功能",
+    "upload_cert_photos": "爱车认证",
+    "upload_hint": "请上传包含车牌号或 VIN 码的照片（通常在挡风玻璃左下角或车门柱上）",
+    "file_limit_hint": "最多 3 张，支持 JPG/PNG，单张 < 5MB",
+    "submit_for_audit": "提交认证",
+    "submit_success_tip": "认证资料已提交，我们会尽快完成审核。",
+    "error_image_limit": "最多只能选择 3 张照片",
+    "error_image_size": "单张照片不能超过 5MB",
+    "error_image_type": "仅支持 JPG 或 PNG 格式照片",
+    "delete_event_title": "确认删除事件",
+    "delete_event_desc": "删除后无法恢复，请确认删除么？"
 }
