--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -106,5 +106,9 @@
     "onboarding_step4": "Stop the vehicle, tap 'End Trip' before picking up",
     "onboarding_step5": "Share your trip and data with others",
     "onboarding_start": "Start Experience",
-    "onboarding_welcome": "Welcome to Puked"
+    "onboarding_welcome": "Welcome to Puked",
+    "saving_image": "Saving as image...",
+    "save_success": "Image saved to gallery",
+    "save_failed": "Failed to save image",
+    "error_no_photo_permission": "Please grant photo gallery permission"
 }
